--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,7 @@ html, body {
   font-family: 'Plus Jakarta Sans';
   font-weight: 500, 700;
   font-size: 16px;
+  
 }
 
 .App-container{
@@ -17,6 +18,13 @@ html, body {
   padding-right: 150px;
   padding-top: 100px;
   padding-bottom: 100px;
+}
+
+.background-container{
+  display: flex;
+  width: 100%;
+  background-color: hsl(0, 0%, 100%);
+  border-radius: 20px;
 }
 
 .left-container, .right-container {
@@ -33,8 +41,6 @@ html, body {
   font-weight: 600;
   align-items:start;
   padding-left: 30px;
-  padding-right: 120px;
-  margin-right: -80px; /*so the left background can fill the empty space left by the right container*/
   border-top-left-radius: 20px;
   border-bottom-left-radius: 20px;
   color: hsl(202, 55%, 16%);
@@ -48,38 +54,33 @@ html, body {
 .heading a{
   font-size: 16px;
   color: hsl(200, 24%, 40%);
-  margin-left: 65px;
+  margin-left: 80px;
 }
 
 .mortgage-inputs {
   display: flex;
   flex-direction: column;
-  max-width: 100%;
-}
-
-
-.input-field {
-  height: 50px;
-  border: 1px solid hsl(200, 24%, 40%);
-  border-radius: 6px;
-  outline: none; /* Removes default focus outline */
- }
- 
- .input-field:hover{
-   cursor: pointer;
- }
- 
- .input-field:focus{
-   border: 2px solid hsl(61, 70%, 52%);
- }
-
- .input-field.error {
-  border-color: hsl(4, 69%, 50%); /* Optional: Adjusts the border color to match */
+  width: 92%;
 }
 
 .amount-container {
   display: flex;
   flex-direction: column;
+  width: 103%;
+}
+
+.input-field {
+  height: 45px;
+  border: 1px solid hsl(200, 24%, 40%);
+  border-radius: 6px;
+}
+ 
+.input-field:hover{
+  cursor: pointer;
+}
+ 
+.input-field:focus{
+  border: 2px solid hsl(61, 70%, 52%);
 }
 
 .input-field.amount {  
@@ -95,7 +96,7 @@ html, body {
 .pound {
   position: relative;
   left: 20px;
-  top: -40px;
+  top: -35px;
   font-size: 20px;
   color: hsl(200, 24%, 40%);
   width: 50px;
@@ -122,16 +123,13 @@ html, body {
 
 .input-field.error{  
   background: linear-gradient(to right, hsl(4, 69%, 50%) 50px, transparent 50px);
+  border-color: hsl(4, 69%, 50%);
 }
 
 .inline-input-container {
   display: flex;
   justify-content: space-between;
-}
-
-.inline-input{
-  width: 45%;
-  margin-right: 5px;
+  gap: 22px;
 }
 
 .inline-input .error-validation {
@@ -152,6 +150,7 @@ html, body {
   font-size: 17px;
   font-weight: bold;
   padding-left: 15px;
+  width: 94%;
   margin-top: 5px;  
 }
 
@@ -186,8 +185,8 @@ html, body {
 .years {
   display: block;
   position: relative;
-  left: 170px;
-  top: 0px;
+  left: 140px;
+  top: 5px;
   margin-top: -40px;
   font-size: 17px;
   color: hsl(200, 24%, 40%);
@@ -197,9 +196,10 @@ html, body {
 .porcentage {
   display: block;
   position: relative;
-  left: 185px;
+  left: 150px;
   top: -35px;
   font-size: 17px;
+  font-weight: bold;
   color: hsl(200, 24%, 40%);
   width: 50px;
 }
@@ -285,7 +285,7 @@ button:hover{
 /*-------- Right Container ------------------------------------------------------------*/
 
 .right-container {
-  flex: 1.1;  
+  flex: 1;  
   background-color: hsl(202, 55%, 16%);
   background-repeat: no-repeat;
   border-top-right-radius: 20px;
