--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
 html, body {
   margin: 0;
   padding: 0;
-  height: 100%;
+  height: 100vh;
   font-family: 'Plus Jakarta Sans';
   font-weight: 500, 700;
   font-size: 16px;
@@ -11,13 +11,10 @@ html, body {
 }
 
 .App-container{
-  height: auto;
+  height: 100%;
   display: flex;
   background-color: hsl(202, 86%, 94%);
-  padding-left: 150px;
-  padding-right: 150px;
-  padding-top: 100px;
-  padding-bottom: 100px;
+  padding:150px;
 }
 
 .background-container{
@@ -29,6 +26,8 @@ html, body {
 
 .left-container, .right-container {
   display: flex;
+  width: 420px;
+  min-width: 420px;
   flex-direction: column;
   justify-content: top;
   height: auto;
@@ -438,12 +437,12 @@ button:hover{
 
   .years{
     right: 0px;
-    top: 60px;
+    top: 65px;
   }
 
   .porcentage{
-    right: -20px;
-    top: 60px;
+    right: -25px;
+    top: 65px;
   }
 
   .heading {
@@ -477,11 +476,11 @@ button:hover{
   }
 
   .calculator-img {
-    margin-right: 5px; /* Adjust image margin for mobile */
+    margin-right: 5px; 
   }
 
   .error-validation {
-    font-size: 12px; /* Reduce font size for mobile error messages */
+    font-size: 12px; 
   }
 
   .error-validation-term{
@@ -490,13 +489,13 @@ button:hover{
 
   .radio-container {
     margin-top: 20px;
-    width: 95%; /* Adjust spacing for radio buttons */
+    width: 95%; 
   }
 
   .radio-name {
-    font-size: 16px; /* Adjust radio button font size */
+    font-size: 16px; 
     padding-left: 15px;
-    height: 45px; /* Make radio buttons a little smaller */
+    height: 45px; 
   }
 
   .radio-name.active {
@@ -506,22 +505,22 @@ button:hover{
   }
 
   .result-container h2 {
-    font-size: 18px; /* Adjust result heading font size */
+    font-size: 18px;
   }
 
   .result-container p {
-    font-size: 12px; /* Adjust result paragraph font size */
+    font-size: 12px; 
   }
 
   .payment-container {
-    padding: 15px; /* Adjust padding for the payment container */
+    padding: 15px;
   }
 
   .monthly-value {
-    font-size: 32px; /* Adjust the font size for monthly value */
+    font-size: 32px;
   }
 
   .total-value {
-    font-size: 18px; /* Adjust the font size for total value */
+    font-size: 18px;
   }
 }
